# pyespdb

./: .gitignore  README.md  REAME.txt  future_readme.txt  pyproject.toml
app/: pyespAssessment.py  pyespCollBubble.py  pyespCollSummary.py  pyespConfig.py  pyespDbGraph.py  pyespHome.py  pyespLineGraph.py  pyespLoadFile.py  pyespSide.py  pyespUpdMaxTotals.py  pyespUtil.py  pyespWorkload.py
db/: insCategory.sql  insCollection.sql  insVisClient.sql  insVisProject.sql  updDiskCat.sql  updIcCategory.sql  updMbpsCategory.sql  updOsCategory.sql
migrate/: migMysql.py  migrate_acmeanvil_to_pyespdb.py  migrate_sp_category.py  migrate_sp_client.py  migrate_sp_collection.py  migrate_sp_database.py  migrate_sp_dbidentity.py  migrate_sp_dbmetric.py  migrate_sp_exaframe.py  migrate_sp_metricplot.py  migrate_sp_project.py
plot/: MbpsbyDbSize.py  MbpsbySession.py  clientNetwork.py  dbSizebySession.py  plotBigMBPS.py  plotCPU.py  plotInst.py  plotLine.py  plotMaxCPU.py  scatterPlot.py
source/: peBase.py  peGenFrameObj.py  peGenMetrics.py  peGenSummaries.py  peLoadSQL.py  peUpdDatabase.py  procFile.py
sql/: checkDates.sql  dec.sql  getAppwithHost.sql  getAvgSessions.sql  getBurndownCPU.sql  getBurndownCost01.sql  getBurndownDbSize.sql  getBurndownRdbms.sql  getClientCollection.sql  getClusterCpu.sql  getClusterRmbps.sql  getClusterWmbps.sql  getCohort1.sql  getCohort1Details.sql  getCohort2.sql  getCohort2Details.sql  getCohort3.sql  getCohort3Details.sql  getDbFrames.sql  getFrameDbCount.sql  getFrameDbDetails.sql  getIndivMax.sql  getMaxCPUbyDatabase.lst  getMaxCPUbyDatabase.sql  (+30 more)
(+39 files in other folders)
